@@ -94,7 +94,8 @@ public class FillingTests {
                 "ул. Юрия Гагарина, д. 22, кв. 12, г. Мелитополь", "+79787444477");
 
         ClientOrder clientOrder1_1 = saveClientOrder(client1, 200, 530.00);
-        saveOrderProduct(clientOrder1_1, products.getFirst(), 1);
+        saveOrderProduct(clientOrder1_1, products.get(0), 1);
+        saveOrderProduct(clientOrder1_1, products.get(5), 1);
 
         ClientOrder clientOrder1_2 = saveClientOrder(client1, 102, 640.00);
         saveOrderProduct(clientOrder1_2, products.get(0), 1);
@@ -104,11 +105,13 @@ public class FillingTests {
         saveOrderProduct(clientOrder2, products.get(2), 1);
         saveOrderProduct(clientOrder2, products.get(4), 1);
         saveOrderProduct(clientOrder2, products.get(3), 1);
+        saveOrderProduct(clientOrder1_2, products.get(5), 1);
 
         ClientOrder clientOrder3 = saveClientOrder(client3, 102, 2230.00);
         saveOrderProduct(clientOrder3, products.get(0), 1);
         saveOrderProduct(clientOrder3, products.get(1), 10);
         saveOrderProduct(clientOrder3, products.get(4), 1);
+        saveOrderProduct(clientOrder1_2, products.get(5), 1);
 
     }
 
